# Gosh-Fetch-Linux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PRD.md  README.md  gosh-fetch.desktop  io.github.gosh.Fetch.metainfo.xml  io.github.gosh.Fetch.yml  technical_spec.md
.github/workflows/: release.yml
crates/gosh-fetch-core/: Cargo.toml
crates/gosh-fetch-core/src/: engine_adapter.rs  error.rs  lib.rs  service.rs  types.rs  utils.rs
crates/gosh-fetch-core/src/db/: connection.rs  downloads.rs  mod.rs  settings.rs
crates/gosh-fetch-cosmic/: Cargo.toml
crates/gosh-fetch-cosmic/src/: app.rs  main.rs
crates/gosh-fetch-gtk/: Cargo.toml  build.rs
crates/gosh-fetch-gtk/resources/ui/: add-download-dialog.ui  completed-view.ui  downloads-view.ui
crates/gosh-fetch-gtk/src/: application.rs  main.rs
crates/gosh-fetch-gtk/src/dialogs/: add_download_dialog.rs  mod.rs  torrent_preview_dialog.rs
crates/gosh-fetch-gtk/src/models/: download_object.rs  mod.rs
crates/gosh-fetch-gtk/src/tray/: mod.rs
crates/gosh-fetch-gtk/src/views/: completed_view.rs  downloads_view.rs  mod.rs  settings_view.rs
crates/gosh-fetch-gtk/src/widgets/: download_row.rs  mod.rs
crates/gosh-fetch-gtk/src/window/: imp.rs  mod.rs
crates/gosh-fetch-qt/: Cargo.toml  build.rs
crates/gosh-fetch-qt/qml/: CompletedPage.qml  DownloadsPage.qml  Main.qml  SettingsPage.qml  main.qml
crates/gosh-fetch-qt/src/: bridge.rs  main.rs  qml.rs
docs/: API.md  ARCHITECTURE.md  QT_FRONTEND.md
migrations/: 001_initial.sql
packaging/appimage/: AppImageBuilder.yml
packaging/deb/: build-deb.sh
packaging/rpm/: gosh-fetch-cosmic.spec  gosh-fetch-qt.spec  gosh-fetch.spec
resources/: resources.gresource.xml
resources/ui/: download-row.ui  settings-view.ui  style.css  window.ui
scripts/: check-qt-deps.sh
snap/: snapcraft-cosmic.yaml  snapcraft-qt.yaml  snapcraft.yaml
