[workspace]
resolver = "2"
members = [
    "crates/gosh-fetch-core",
    "crates/gosh-fetch-qt",
]
default-members = ["crates/gosh-fetch-qt"]

[workspace.package]
version = "2.1.0"
authors = ["Gosh"]
license = "AGPL-3.0"
repository = "https://github.com/goshitsarch-eng/Gosh-Fetch-linux"
edition = "2021"

[workspace.dependencies]
# Core crate
gosh-fetch-core = { path = "crates/gosh-fetch-core" }

# Download engine
gosh-dl = { git = "https://github.com/goshitsarch-eng/gosh-dl" }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-channel = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
once_cell = "1"

# Desktop notifications
notify-rust = "4"

# File operations
open = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
