[package]
name = "gosh-fetch-cosmic"
description = "COSMIC desktop frontend for Gosh-Fetch"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[[bin]]
name = "gosh-fetch-cosmic"
path = "src/main.rs"

[dependencies]
gosh-fetch-core.workspace = true
libcosmic.workspace = true
tokio.workspace = true
async-channel.workspace = true
futures.workspace = true
log.workspace = true
env_logger.workspace = true
once_cell.workspace = true
open.workspace = true
rfd.workspace = true
