[package]
name = "gosh-fetch-qt"
description = "Qt6 frontend for Gosh-Fetch"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[[bin]]
name = "gosh-fetch-qt"
path = "src/main.rs"

[dependencies]
gosh-fetch-core.workspace = true
cxx.workspace = true
cxx-qt.workspace = true
cxx-qt-lib.workspace = true
tokio.workspace = true
async-channel.workspace = true
log.workspace = true
env_logger.workspace = true
once_cell.workspace = true
serde_json.workspace = true
open.workspace = true

[build-dependencies]
cxx-qt-build.workspace = true
