[package]
name = "gosh-fetch-qt"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
gosh-fetch-core.workspace = true
serde_json.workspace = true
async-channel.workspace = true
notify-rust.workspace = true
open.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true

cxx = "1"
cxx-qt = "0.6"
cxx-qt-lib = "0.6"

[build-dependencies]
cxx-qt-build = "0.6"
